[project]
name = "servant"
version = "0.1.0"
description = "API server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.14",
    "fastapi>=0.116.1",
    "fastapi-security>=0.1.0",
    "google-auth>=2.40.3",
    "gspread>=6.2.1",
    "oauth2client>=4.1.3",
    "pydantic-settings>=2.10.1",
    "uvicorn>=0.35.0",
]
